syntax = 'proto3';

package auth.role;

option go_package = "github.com/ducketlab/auth/pkg/role";

import "github.com/ducketlab/mingo/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

import "pkg/role/pb/enum.proto";

message Role {
  string id = 1[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
  ];
  int64 create_at = 2[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
  ];
  int64 update_at = 3[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
  ];
  string domain = 4[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
  ];
  string creater = 5[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
  ];
  RoleType type = 6[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
  ];
  string name = 7[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
  ];
  string description =8[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description"'}
  ];
  map<string, string> meta =10[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"meta" json:"meta"'}
  ];
  repeated Permission permissions = 9[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"permissions,omitempty"'}
  ];
  string scope = 11 [
    (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"scope"'}
  ];
}

message Permission {
  string id = 1[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
  ];
  string role_id = 2[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"role_id" json:"role_id"'}
  ];
  int64 create_at = 3[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
  ];
  string creater = 4[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
  ];
  EffectType effect = 5[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"effect" json:"effect"'}
  ];
  string service_id = 6[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"service_id" json:"service_id"'}
  ];
  string resource_name = 7[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"resource_name" json:"resource_name"'}
  ];
  string label_key = 8[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"label_key" json:"label_key"'}
  ];
  bool match_all = 9[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"match_all" json:"match_all"'}
  ];
  repeated string label_values = 10[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"label_values" json:"label_values"'}
  ];
  string scope = 11 [
    (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"scope"'}
  ];
  string desc = 12 [
    (google.protobuf.field_tag) = {struct_tag: 'bson:"desc" json:"desc"'}
  ];
}

message Set {
  int64 total = 1[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
  ];
  repeated Role items = 2[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
  ];
}

message PermissionSet {
  int64 total = 1[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
  ];
  repeated Permission items = 2[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
  ];
}